--- a/index.html
+++ b/index.html
@@ -61,17 +61,26 @@
       <div class="row">
         <div class="col">
           <div class="centered-container">
-            <h1>Bienvenidossa al mundo 3D!</h1>
+            <h1>Bienvenidos al mundo 3D!</h1>
           </div>
         </div>
       </div>
     </div>
 
     <footer>
+      <div class="row">
+      <div class="col text-center mt-5">
+        <a href="pages/products.html" class="button">Products</a>
+      </div>
+    </div>
+  </div></footer>
+    
+
+    <footer>
       <div class="container">
         <div class="row">
           <div class="col">
-            <a href="pages/products.html" class="button">Products</a>
+            <p class="footer-text">Creado por Matias Paris</p>
           </div>
         </div>
       </div>
