--- a/pages/cart.html
+++ b/pages/cart.html
@@ -30,7 +30,9 @@
                   <a class="nav-link" href="../pages/about.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../pages/contact.html">Contact Us</a>
+                  <a class="nav-link" href="../pages/contact.html"
+                    >Contact Us</a
+                  >
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="../pages/cart.html">
@@ -97,5 +99,14 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <p class="footer-text">Creado por Matias Paris</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
