--- a/pages/about.html
+++ b/pages/about.html
@@ -28,9 +28,6 @@
               />
             </a>
           </li>
-          <li>
-            <a href="contact.html" class="button">Contact Us</a>
-          </li>
         </ul>
       </nav>
     </header>
@@ -38,8 +35,24 @@
 
     <div class="about-us-container">
       <p>
-        aksfgnmlaksfglkasmnflgkasjfgakjsfngkjasfngkjasnfgkjasnfg,manfg,masnfgljksafngljkasfngklajsnfgkajsfngkjasfngkjsafngkajsfngkjsnfgkjasnfgkajsfngkajsfngkjsfngkjsnfgkajsnfgkjasnfgjnkansjfgnkasfaksfgnmlaksfglkasmnflgkasjfgakjsfngkjasfngkjasnfgkjasnfg,manfg,masnfgljksafngljkasfngklajsnfgkajsfngkjasfngkjsafngkajsfngkjsnfgkjasnfgkajsfngkajsfngkjsfngkjsnfgkajsnfgkjasnfgjnkansjfgnkasfaksfgnmlaksfglkasmnflgkasjfgakjsfngkjasfngkjasnfgkjasnfg,manfg,masnfgljksafngljkasfngklajsnfgkajsfngkjasfngkjsafngkajsfngkjsnfgkjasnfgkajsfngkajsfngkjsfngkjsnfgkajsnfgkjasnfgjnkansjfgnkasf
+        Enim adipisicing proident ad velit eu occaecat excepteur eiusmod labore
+        mollit aliquip reprehenderit ipsum magna. Laborum consequat consectetur
+        minim magna esse. Consequat eiusmod id do tempor consequat elit velit
+        velit officia nulla ullamco. Officia commodo duis veniam cillum ipsum
+        sint voluptate exercitation officia eiusmod qui. Laboris reprehenderit
+        magna Lorem ut id aliqua et elit consequat dolor elit dolore dolor do.
+        Proident anim adipisicing exercitation dolore ipsum voluptate anim
+        velit. Et consectetur eu velit ullamco mollit adipisicing.
       </p>
     </div>
+    <footer class="footer-end">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <p class="footer-text">Creado por Matias Paris ®</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
