--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,9 +29,6 @@
               />
             </a>
           </li>
-          <li>
-            <a href="contact.html" class="button">Contact Us</a>
-          </li>
         </ul>
       </nav>
     </header>
@@ -51,5 +48,14 @@
         <img src="../assets/img/mapa.png" alt="Mapa" />
       </div>
     </div>
+    <footer class="footer-end">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <p class="footer-text">Creado por Matias Paris ®</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
