--- a/pages/products.html
+++ b/pages/products.html
@@ -7,7 +7,7 @@
     <title>Products</title>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body class="other-body">
+  <body class="body">
     <header>
       <img
         class="logo"
@@ -26,9 +26,6 @@
               alt="Carrito"
             />
           </a>
-          <li>
-            <a href="contact.html" class="button">Contact Us</a>
-          </li>
         </ul>
       </nav>
     </header>
@@ -72,5 +69,14 @@
         <h3>Producto 8</h3>
       </div>
     </div>
+    <footer class="footer-end">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <p class="footer-text">Creado por Matias Paris ®</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
