--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <nav class="d-grid gap-2">
               <ul class="nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link" href="index.html">Home |</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="pages/about.html">About Us</a>
+                  <a class="nav-link" href="pages/about.html">About Us |</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="pages/contact.html">Contact Us</a>
@@ -44,11 +44,6 @@
                       alt="Carrito"
                     />
                   </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link button" href="pages/contact.html"
-                    >Contact Us</a
-                  >
                 </li>
               </ul>
             </nav>
@@ -76,15 +71,15 @@
   </div></footer>
     
 
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <p class="footer-text">Creado por Matias Paris</p>
-          </div>
+  <footer class="footer-end">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <p class="footer-text">Creado por Matias Paris ®</p>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/js/bootstrap.bundle.min.js"></script>
   </body>
