--- a/pages/cart.html
+++ b/pages/cart.html
@@ -7,7 +7,7 @@
     <title>Cart</title>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body class="other-body">
+  <body class="body">
     <header>
       <div class="container">
         <div class="row">
@@ -24,10 +24,10 @@
             <nav class="d-grid gap-2">
               <ul class="nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="../index.html">Home</a>
+                  <a class="nav-link" href="../index.html">Home |</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../pages/about.html">About Us</a>
+                  <a class="nav-link" href="../pages/about.html">About Us |</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="../pages/contact.html"
@@ -42,11 +42,6 @@
                       alt="Carrito"
                     />
                   </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link button" href="../pages/contact.html"
-                    >Contact Us</a
-                  >
                 </li>
               </ul>
             </nav>
@@ -99,11 +94,11 @@
         </div>
       </div>
     </div>
-    <footer>
+    <footer class="footer-end">
       <div class="container">
         <div class="row">
           <div class="col">
-            <p class="footer-text">Creado por Matias Paris</p>
+            <p class="footer-text">Creado por Matias Paris ®</p>
           </div>
         </div>
       </div>
