--- a/pages/about.html
+++ b/pages/about.html
@@ -3,49 +3,77 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="3D Garage, About Us, Acerca de Nosotros, Automovilismo, Auto de Carrera"
+    />
     <link rel="shortcut icon" href="../assets/img/3dlogo.png" />
-    <title>About Us</title>
+    <title>About Us - 3D Garage</title>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body class="other-body">
+  <body>
     <header>
-      <img
-        class="logo"
-        src="../assets/img/3dlogo.png"
-        alt="Logo de la página"
-      />
-      <nav>
-        <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-          <li>
-            <a href="cart.html">
+      <div class="container">
+        <div class="row">
+          <div class="col-auto">
+            <div class="logo-container">
               <img
-                class="carrito"
-                src="../assets/img/carrito.png"
-                alt="Carrito"
+                class="logo"
+                src="../assets/img/3dlogo.png"
+                alt="Logo de 3D Garage - Tienda de Artículos en 3D para Autos de Carrera"
               />
-            </a>
-          </li>
-        </ul>
-      </nav>
+            </div>
+          </div>
+          <div class="col">
+            <nav class="d-grid gap-2">
+              <ul class="nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Home |</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/about.html">About Us |</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/contact.html"
+                    >Contact Us</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/cart.html">
+                    <img
+                      class="carrito"
+                      src="../assets/img/carrito.png"
+                      alt="Carrito"
+                    />
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
     </header>
     <h1>About Us</h1>
 
     <div class="about-us-container">
       <p>
-        Enim adipisicing proident ad velit eu occaecat excepteur eiusmod labore
-        mollit aliquip reprehenderit ipsum magna. Laborum consequat consectetur
-        minim magna esse. Consequat eiusmod id do tempor consequat elit velit
-        velit officia nulla ullamco. Officia commodo duis veniam cillum ipsum
-        sint voluptate exercitation officia eiusmod qui. Laboris reprehenderit
-        magna Lorem ut id aliqua et elit consequat dolor elit dolore dolor do.
-        Proident anim adipisicing exercitation dolore ipsum voluptate anim
-        velit. Et consectetur eu velit ullamco mollit adipisicing.
+        En 3D Garage, estamos apasionados por los autos de carrera y la
+        innovación en el mundo del automovilismo. Somos una empresa dedicada a
+        proporcionar artículos en 3D de alta calidad diseñados específicamente
+        para entusiastas del automovilismo y pilotos apasionados. Nuestra pasión
+        por la velocidad y el rendimiento nos ha llevado a la vanguardia de esta
+        emocionante industria.
+      </p>
+      <p>
+        Únete a nosotros en esta emocionante travesía mientras continuamos
+        expandiendo nuestra gama de productos para satisfacer las demandas del
+        apasionante mundo automovilístico. Ya seas un conductor profesional, un
+        aficionado o simplemente alguien enamorado de la velocidad, en 3D Garage
+        encontrarás los artículos en 3D perfectos para llevar tu pasión por los
+        autos de carrera al siguiente nivel.
       </p>
     </div>
-    <footer class="footer-end">
+    <footer class="footer">
       <div class="container">
         <div class="row">
           <div class="col">
