--- a/pages/cart.html
+++ b/pages/cart.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="3D Garage, Cart, Carrito de Compras, Compras en Línea, Automovilismo"
+    />
     <link rel="shortcut icon" href="../assets/img/3dlogo.png" />
-    <title>Cart</title>
+    <title>Cart - 3D Garage</title>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body class="body">
+  <body class="body cart-page">
     <header>
       <div class="container">
         <div class="row">
@@ -16,7 +20,7 @@
               <img
                 class="logo"
                 src="../assets/img/3dlogo.png"
-                alt="Logo de la página"
+                alt="Logo de 3D Garage - Tienda de Artículos en 3D para Autos de Carrera"
               />
             </div>
           </div>
@@ -50,51 +54,114 @@
       </div>
     </header>
 
-    <h1>Cart</h1>
+    <h1>Carrito de Compras</h1>
 
     <div class="container">
-      <div class="row">
-        <div class="col">
-          <div class="products-container">
-            <div class="product">
-              <img src="../assets/img/prod1.png" alt="Producto 1" />
-            </div>
+      <!-- Product 1 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img
+            src="../assets/img/prod1.png"
+            alt="Soporte para bomba de combustible doble"
+          />
+          <h3>Soporte para bomba de combustible doble</h3>
+          <div class="btn-container">
+            <button class="btn-delete">Eliminar del carrito</button>
+          </div>
+        </div>
+      </div>
 
-            <div class="product">
-              <img src="../assets/img/prod2.png" alt="Producto 2" />
-            </div>
-            <div class="product">
-              <img src="../assets/img/prod3.png" alt="Producto 3" />
-            </div>
-            <div class="product">
-              <img src="../assets/img/prod4.png" alt="Producto 4" />
-            </div>
+      <!-- Product 2 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img src="../assets/img/prod2.png" alt="Soporte para casco/volante" />
+          <h3>Soporte para casco/volante</h3>
+          <div class="btn-container">
+            <button class="btn-delete">Eliminar del carrito</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Product 3 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img src="../assets/img/prod3.png" alt="Soporte para cámara GoPro" />
+          <h3>Soporte para cámara GoPro</h3>
+          <div class="btn-container">
+            <button class="btn-delete">Eliminar del carrito</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Product 4 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img src="../assets/img/prod4.png" alt="Soporte para Fueltech" />
+          <h3>Soporte para Fueltech</h3>
+          <div class="btn-container">
+            <button class="btn-delete">Eliminar del carrito</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Product 5 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img
+            src="../assets/img/prod5.png"
+            alt="Tapas para excéntricas de karting"
+          />
+          <h3>Tapas para excéntricas de karting</h3>
+          <div class="btn-container">
+            <button class="btn-delete">Eliminar del carrito</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Product 6 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img
+            src="../assets/img/prod6.png"
+            alt="Soportes para garrafa de amortiguadores"
+          />
+          <h3>Soportes para garrafa de amortiguadores</h3>
+          <div class="btn-container">
+            <button class="btn-delete">Eliminar del carrito</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Product 7 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img
+            src="../assets/img/prod7.png"
+            alt="Soporte para Fueltech Nano en VW gol"
+          />
+          <h3>Soporte para Fueltech Nano en VW gol</h3>
+          <div class="btn-container">
+            <button class="btn-delete">Eliminar del carrito</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Product 8 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img
+            src="../assets/img/prod8.png"
+            alt="Soporte para espejo retrovisor en jaula"
+          />
+          <h3>Soporte para espejo retrovisor en jaula</h3>
+          <div class="btn-container">
+            <button class="btn-delete">Eliminar del carrito</button>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <div class="products-container">
-            <div class="product">
-              <img src="../assets/img/prod5.png" alt="Producto 5" />
-            </div>
-            <div class="product">
-              <img src="../assets/img/prod6.png" alt="Producto 6" />
-            </div>
-            <div class="product">
-              <img src="../assets/img/prod7.png" alt="Producto 7" />
-            </div>
-            <div class="product">
-              <img src="../assets/img/prod8.png" alt="Producto 8" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <footer class="footer-end">
+    <footer class="footer">
       <div class="container">
         <div class="row">
           <div class="col">
