--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,52 +3,79 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="3D Garage, Contact Us, Contacto, Información de Contacto"
+    />
     <link rel="shortcut icon" href="../assets/img/3dlogo.png" />
-    <title>Contact Us</title>
+    <title>Contact Us - 3D Garage</title>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body class="other-body">
+  <body class="body">
     <header>
-      <img
-        class="logo"
-        src="../assets/img/3dlogo.png"
-        alt="Logo de la página"
-      />
-      <nav>
-        <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-
-          <li>
-            <a href="cart.html">
+      <div class="container">
+        <div class="row">
+          <div class="col-auto">
+            <div class="logo-container">
               <img
-                class="carrito"
-                src="../assets/img/carrito.png"
-                alt="Carrito"
+                class="logo"
+                src="../assets/img/3dlogo.png"
+                alt="Logo de 3D Garage - Tienda de Artículos en 3D para Autos de Carrera"
               />
-            </a>
-          </li>
-        </ul>
-      </nav>
+            </div>
+          </div>
+          <div class="col">
+            <nav class="d-grid gap-2">
+              <ul class="nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Home |</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/about.html">About Us |</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/contact.html"
+                    >Contact Us</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/cart.html">
+                    <img
+                      class="carrito"
+                      src="../assets/img/carrito.png"
+                      alt="Carrito"
+                    />
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
     </header>
 
     <h1>Contact Us</h1>
 
     <div class="contact-container">
       <div class="contact-info">
-        <h2>Contact</h2>
-        <p>Email: contact@example.com</p>
-        <p>Phone: +1 234 567 890</p>
+        <h2>Contact Information</h2>
+        <p>
+          Email: <a href="mailto:contact@example.com">contact@example.com</a>
+        </p>
+        <p>Phone: <a href="tel:+1234567890">+1 234 567 890</a></p>
         <p>Address: Calle Principal 123, Ciudad, País</p>
       </div>
 
       <div class="map">
         <h2>Location</h2>
-        <img src="../assets/img/mapa.png" alt="Mapa" />
+        <img
+          src="../assets/img/mapa.png"
+          alt="Mapa de la ubicación de 3D Garage"
+        />
       </div>
     </div>
-    <footer class="footer-end">
+
+    <footer class="footer">
       <div class="container">
         <div class="row">
           <div class="col">
