--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="assets/img/3dlogo.png" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/css/bootstrap.min.css"
+    <meta
+      name="keywords"
+      content="3D Garage, Home, Inicio, Automovilismo, Auto de Carrera"
     />
-    <title>3D Garage</title>
+    <link rel="shortcut icon" href="assets/img/3dlogo.png" />
+    <title>3D Garage - Home</title>
+    <meta
+      name="description"
+      content="Bienvenido a 3D Garage, tu tienda en línea para artículos en 3D diseñados para entusiastas del automovilismo y pilotos apasionados. Descubre nuestra amplia selección de soportes para bomba de combustible doble, casco/volante, cámara GoPro, Fueltech, tapas para excentricas de karting, soportes para garrafa de amortiguadores, Fueltech Nano en VW gol y soportes para espejo retrovisor en jaula."
+    />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
+
+  <body class="body">
     <header>
       <div class="container">
         <div class="row">
@@ -20,7 +25,7 @@
               <img
                 class="logo"
                 src="assets/img/3dlogo.png"
-                alt="Logo de la página"
+                alt="Logo de 3D Garage - Tienda de Artículos en 3D para Autos de Carrera"
               />
             </div>
           </div>
@@ -62,24 +67,26 @@
       </div>
     </div>
 
-    <footer>
-      <div class="row">
-      <div class="col text-center mt-5">
-        <a href="pages/products.html" class="button">Products</a>
-      </div>
-    </div>
-  </div></footer>
-    
-
-  <footer class="footer-end">
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <p class="footer-text">Creado por Matias Paris ®</p>
+    <div class="container mt-4">
+      <!-- Agregamos una clase "mt-4" para agregar un margen superior -->
+      <div class="row justify-content-center">
+        <!-- Agregamos la clase "justify-content-center" para centrar horizontalmente -->
+        <div class="col text-center">
+          <!-- Agregamos la clase "text-center" para centrar el contenido del col -->
+          <a href="pages/products.html" class="btn-products">Products</a>
         </div>
       </div>
     </div>
-  </footer>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <p class="footer-text">Creado por Matias Paris ®</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/js/bootstrap.bundle.min.js"></script>
   </body>
