--- a/pages/products.html
+++ b/pages/products.html
@@ -3,73 +3,145 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="3D Garage, Products, Soportes, Auto de Carrera, Automovilismo"
+    />
     <link rel="shortcut icon" href="../assets/img/3dlogo.png" />
-    <title>Products</title>
+    <title>Products - 3D Garage</title>
+    <meta
+      name="description"
+      content="Explora nuestra amplia selección de productos en 3D para entusiastas del automovilismo y pilotos apasionados. Encuentra soportes para bomba de combustible doble, casco/volante, cámara GoPro, Fueltech, tapas para excentricas de karting, soportes para garrafa de amortiguadores, Fueltech Nano en VW gol y soportes para espejo retrovisor en jaula."
+    />
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body class="body">
+  <body class="body products-page">
     <header>
-      <img
-        class="logo"
-        src="../assets/img/3dlogo.png"
-        alt="Logo de la página"
-      />
-      <nav>
-        <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-          <a href="cart.html">
-            <img
-              class="carrito"
-              src="../assets/img/carrito.png"
-              alt="Carrito"
-            />
-          </a>
-        </ul>
-      </nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-auto">
+            <div class="logo-container">
+              <img
+                class="logo"
+                src="../assets/img/3dlogo.png"
+                alt="Logo de 3D Garage - Tienda de Artículos en 3D para Autos de Carrera"
+              />
+            </div>
+          </div>
+          <div class="col">
+            <nav class="d-grid gap-2">
+              <ul class="nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Home |</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/about.html">About Us |</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/contact.html"
+                    >Contact Us</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/cart.html">
+                    <img
+                      class="carrito"
+                      src="../assets/img/carrito.png"
+                      alt="Carrito"
+                    />
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
     </header>
 
     <h1>Products</h1>
 
-    <div class="products-container">
-      <div class="product">
-        <img src="../assets/img/prod1.png" alt="Producto 1" />
-        <h3>Producto 1</h3>
+    <div class="container">
+      <!-- Product 1 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img
+            src="../assets/img/prod1.png"
+            alt="Soporte para bomba de combustible doble"
+          />
+          <h3>Soporte para bomba de combustible doble</h3>
+        </div>
       </div>
 
-      <div class="product">
-        <img src="../assets/img/prod2.png" alt="Producto 2" />
-        <h3>Producto 2</h3>
+      <!-- Product 2 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img src="../assets/img/prod2.png" alt="Soporte para casco/volante" />
+          <h3>Soporte para casco/volante</h3>
+        </div>
       </div>
-      <div class="product">
-        <img src="../assets/img/prod3.png" alt="Producto 3" />
-        <h3>Producto 3</h3>
+
+      <!-- Product 3 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img src="../assets/img/prod3.png" alt="Soporte para cámara GoPro" />
+          <h3>Soporte para cámara GoPro</h3>
+        </div>
       </div>
-      <div class="product">
-        <img src="../assets/img/prod4.png" alt="Producto 4" />
-        <h3>Producto 4</h3>
+
+      <!-- Product 4 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img src="../assets/img/prod4.png" alt="Soporte para Fueltech" />
+          <h3>Soporte para Fueltech</h3>
+        </div>
+      </div>
+
+      <!-- Product 5 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img
+            src="../assets/img/prod5.png"
+            alt="Tapas para excentricas de karting"
+          />
+          <h3>Tapas para excentricas de karting</h3>
+        </div>
+      </div>
+
+      <!-- Product 6 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img
+            src="../assets/img/prod6.png"
+            alt="Soportes para garrafa de amortiguadores"
+          />
+          <h3>Soportes para garrafa de amortiguadores</h3>
+        </div>
+      </div>
+
+      <!-- Product 7 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img
+            src="../assets/img/prod7.png"
+            alt="Soporte para Fueltech Nano en VW gol"
+          />
+          <h3>Soporte para Fueltech Nano en VW gol</h3>
+        </div>
+      </div>
+
+      <!-- Product 8 -->
+      <div class="d-flex flex-column">
+        <div class="product">
+          <img
+            src="../assets/img/prod8.png"
+            alt="Soporte para espejo retrovisor en jaula"
+          />
+          <h3>Soporte para espejo retrovisor en jaula</h3>
+        </div>
       </div>
     </div>
-    <div class="products-container">
-      <div class="product">
-        <img src="../assets/img/prod5.png" alt="Producto 5" />
-        <h3>Producto 5</h3>
-      </div>
-      <div class="product">
-        <img src="../assets/img/prod6.png" alt="Producto 6" />
-        <h3>Producto 6</h3>
-      </div>
-      <div class="product">
-        <img src="../assets/img/prod7.png" alt="Producto 7" />
-        <h3>Producto 7</h3>
-      </div>
-      <div class="product">
-        <img src="../assets/img/prod8.png" alt="Producto 8" />
-        <h3>Producto 8</h3>
-      </div>
-    </div>
-    <footer class="footer-end">
+
+    <footer class="footer">
       <div class="container">
         <div class="row">
           <div class="col">
