--- a/pages/products.html
+++ b/pages/products.html
@@ -8,12 +8,16 @@
       content="3D Garage, Products, Soportes, Auto de Carrera, Automovilismo"
     />
     <link rel="shortcut icon" href="../assets/img/3dlogo.png" />
-    <title>Products - 3D Garage</title>
+    <title>3D Garage - Expertos en piezas hechas en 3D</title>
+    <meta
+      name="description"
+      content="Bienvenido a 3D Garage, tu tienda en línea para artículos en 3D diseñados para entusiastas del automovilismo y pilotos apasionados. Descubre nuestra amplia selección de soportes para bomba de combustible doble, casco/volante, cámara GoPro, Fueltech, tapas para excentricas de karting, soportes para garrafa de amortiguadores, Fueltech Nano en VW gol y soportes para espejo retrovisor en jaula."
+    />
     <meta
       name="description"
       content="Explora nuestra amplia selección de productos en 3D para entusiastas del automovilismo y pilotos apasionados. Encuentra soportes para bomba de combustible doble, casco/volante, cámara GoPro, Fueltech, tapas para excentricas de karting, soportes para garrafa de amortiguadores, Fueltech Nano en VW gol y soportes para espejo retrovisor en jaula."
     />
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../sass/styles.css" />
   </head>
   <body class="body products-page">
     <header>
@@ -32,15 +36,15 @@
             <nav class="d-grid gap-2">
               <ul class="nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="../index.html">Home |</a>
+                  <a class="nav-link" href="../index.html">Principal</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../pages/about.html">About Us |</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../pages/contact.html"
-                    >Contact Us</a
+                  <a class="nav-link" href="../pages/about.html"
+                    >Sobre nosotros</a
                   >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/contact.html">Contacto</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="../pages/cart.html">
@@ -58,7 +62,7 @@
       </div>
     </header>
 
-    <h1>Products</h1>
+    <h1>Productos</h1>
 
     <div class="container">
       <!-- Product 1 -->
@@ -140,8 +144,9 @@
         </div>
       </div>
     </div>
+    <div class="divider"></div>
 
-    <footer class="footer">
+    <footer class="footer" id="page-footer">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -150,5 +155,19 @@
         </div>
       </div>
     </footer>
+
+    <script>
+      window.addEventListener("scroll", function () {
+        const footer = document.getElementById("page-footer");
+        const isScrolledToBottom =
+          window.innerHeight + window.scrollY >= document.body.offsetHeight;
+
+        if (isScrolledToBottom) {
+          footer.style.display = "block";
+        } else {
+          footer.style.display = "none";
+        }
+      });
+    </script>
   </body>
 </html>
