--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
       content="3D Garage, Home, Inicio, Automovilismo, Auto de Carrera"
     />
     <link rel="shortcut icon" href="assets/img/3dlogo.png" />
-    <title>3D Garage - Home</title>
+    <title>3D Garage - Expertos en piezas hechas en 3D</title>
     <meta
       name="description"
       content="Bienvenido a 3D Garage, tu tienda en línea para artículos en 3D diseñados para entusiastas del automovilismo y pilotos apasionados. Descubre nuestra amplia selección de soportes para bomba de combustible doble, casco/volante, cámara GoPro, Fueltech, tapas para excentricas de karting, soportes para garrafa de amortiguadores, Fueltech Nano en VW gol y soportes para espejo retrovisor en jaula."
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="sass/styles.css" />
   </head>
 
   <body class="body">
@@ -33,13 +33,13 @@
             <nav class="d-grid gap-2">
               <ul class="nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home |</a>
+                  <a class="nav-link" href="index.html">Principal</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="pages/about.html">About Us |</a>
+                  <a class="nav-link" href="pages/about.html">Sobre nosotros</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="pages/contact.html">Contact Us</a>
+                  <a class="nav-link" href="pages/contact.html">Contacto</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="pages/cart.html">
@@ -73,12 +73,13 @@
         <!-- Agregamos la clase "justify-content-center" para centrar horizontalmente -->
         <div class="col text-center">
           <!-- Agregamos la clase "text-center" para centrar el contenido del col -->
-          <a href="pages/products.html" class="btn-products">Products</a>
+          <a href="pages/products.html" class="btn-products">Productos</a>
         </div>
       </div>
     </div>
+    <div class="divider"></div>
 
-    <footer class="footer">
+    <footer class="footer" id="page-footer">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -87,6 +88,20 @@
         </div>
       </div>
     </footer>
+
+    <script>
+      window.addEventListener("scroll", function () {
+        const footer = document.getElementById("page-footer");
+        const isScrolledToBottom =
+          window.innerHeight + window.scrollY >= document.body.offsetHeight;
+
+        if (isScrolledToBottom) {
+          footer.style.display = "block";
+        } else {
+          footer.style.display = "none";
+        }
+      });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/js/bootstrap.bundle.min.js"></script>
   </body>
