--- a/pages/about.html
+++ b/pages/about.html
@@ -8,8 +8,12 @@
       content="3D Garage, About Us, Acerca de Nosotros, Automovilismo, Auto de Carrera"
     />
     <link rel="shortcut icon" href="../assets/img/3dlogo.png" />
-    <title>About Us - 3D Garage</title>
-    <link rel="stylesheet" href="../css/styles.css" />
+    <title>3D Garage - Expertos en piezas hechas en 3D</title>
+    <meta
+      name="description"
+      content="Bienvenido a 3D Garage, tu tienda en línea para artículos en 3D diseñados para entusiastas del automovilismo y pilotos apasionados. Descubre nuestra amplia selección de soportes para bomba de combustible doble, casco/volante, cámara GoPro, Fueltech, tapas para excentricas de karting, soportes para garrafa de amortiguadores, Fueltech Nano en VW gol y soportes para espejo retrovisor en jaula."
+    />
+    <link rel="stylesheet" href="../sass/styles.css" />
   </head>
   <body>
     <header>
@@ -28,15 +32,15 @@
             <nav class="d-grid gap-2">
               <ul class="nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="../index.html">Home |</a>
+                  <a class="nav-link" href="../index.html">Principal</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../pages/about.html">About Us |</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../pages/contact.html"
-                    >Contact Us</a
+                  <a class="nav-link" href="../pages/about.html"
+                    >Sobre nosotros</a
                   >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/contact.html">Contacto</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="../pages/cart.html">
@@ -53,7 +57,7 @@
         </div>
       </div>
     </header>
-    <h1>About Us</h1>
+    <h1>Sobre nosotros</h1>
 
     <div class="about-us-container">
       <p>
@@ -73,7 +77,9 @@
         autos de carrera al siguiente nivel.
       </p>
     </div>
-    <footer class="footer">
+    <div class="divider"></div>
+
+    <footer class="footer" id="page-footer">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -82,5 +88,19 @@
         </div>
       </div>
     </footer>
+
+    <script>
+      window.addEventListener("scroll", function () {
+        const footer = document.getElementById("page-footer");
+        const isScrolledToBottom =
+          window.innerHeight + window.scrollY >= document.body.offsetHeight;
+
+        if (isScrolledToBottom) {
+          footer.style.display = "block";
+        } else {
+          footer.style.display = "none";
+        }
+      });
+    </script>
   </body>
 </html>
