--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,8 +8,12 @@
       content="3D Garage, Contact Us, Contacto, Información de Contacto"
     />
     <link rel="shortcut icon" href="../assets/img/3dlogo.png" />
-    <title>Contact Us - 3D Garage</title>
-    <link rel="stylesheet" href="../css/styles.css" />
+    <title>3D Garage - Expertos en piezas hechas en 3D</title>
+    <meta
+      name="description"
+      content="Bienvenido a 3D Garage, tu tienda en línea para artículos en 3D diseñados para entusiastas del automovilismo y pilotos apasionados. Descubre nuestra amplia selección de soportes para bomba de combustible doble, casco/volante, cámara GoPro, Fueltech, tapas para excentricas de karting, soportes para garrafa de amortiguadores, Fueltech Nano en VW gol y soportes para espejo retrovisor en jaula."
+    />
+    <link rel="stylesheet" href="../sass/styles.css" />
   </head>
   <body class="body">
     <header>
@@ -28,15 +32,15 @@
             <nav class="d-grid gap-2">
               <ul class="nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="../index.html">Home |</a>
+                  <a class="nav-link" href="../index.html">Principal</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../pages/about.html">About Us |</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../pages/contact.html"
-                    >Contact Us</a
+                  <a class="nav-link" href="../pages/about.html"
+                    >Sobre nosotros</a
                   >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/contact.html">Contacto</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="../pages/cart.html">
@@ -54,28 +58,29 @@
       </div>
     </header>
 
-    <h1>Contact Us</h1>
+    <h1>Contacto</h1>
 
     <div class="contact-container">
       <div class="contact-info">
-        <h2>Contact Information</h2>
+        <h2>Informacion de contacto</h2>
         <p>
           Email: <a href="mailto:contact@example.com">contact@example.com</a>
         </p>
-        <p>Phone: <a href="tel:+1234567890">+1 234 567 890</a></p>
-        <p>Address: Calle Principal 123, Ciudad, País</p>
+        <p>Telefono: <a href="tel:+1234567890">+1 234 567 890</a></p>
+        <p>Direccion: Calle Principal 123, Ciudad, País</p>
       </div>
 
       <div class="map">
-        <h2>Location</h2>
+        <h2>Ubicacion</h2>
         <img
           src="../assets/img/mapa.png"
           alt="Mapa de la ubicación de 3D Garage"
         />
       </div>
     </div>
+    <div class="divider"></div>
 
-    <footer class="footer">
+    <footer class="footer" id="page-footer">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -84,5 +89,19 @@
         </div>
       </div>
     </footer>
+
+    <script>
+      window.addEventListener("scroll", function () {
+        const footer = document.getElementById("page-footer");
+        const isScrolledToBottom =
+          window.innerHeight + window.scrollY >= document.body.offsetHeight;
+
+        if (isScrolledToBottom) {
+          footer.style.display = "block";
+        } else {
+          footer.style.display = "none";
+        }
+      });
+    </script>
   </body>
 </html>
