commit to build

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <img
                 class="logo"
                 src="assets/img/3dlogo.png"
-                alt="Logo de 3D Garage - Tienda de Artículos en 3D para Autos de Carrera"
+                alt="Logo 3D Garage - Tienda de Artículos en 3D para Autos de Carrera"
               />
             </div>
           </div>
